<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F0E3"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="2dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="223dp"
            android:layout_height="214dp"
            app:srcCompat="@drawable/bookly_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/livros_dispon_veis"
            android:textColor="#4D464E"
            android:textSize="28sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewLivros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scrollbars="horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/literatura_brasileira"
            android:textColor="#4D464E"
            android:textSize="28sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMaisLivros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scrollbars="horizontal" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/romances"
            android:textColor="#4D464E"
            android:textSize="28sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMaisLivros2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scrollbars="horizontal" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp" />

        <Button
            android:id="@+id/voltarmenu4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#F5F0E3"
            android:text="@string/voltar"
            android:textColor="#4D464E" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
