<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="200dp"
    android:layout_height="300dp"
    android:background="@android:color/transparent"
    card_view:cardBackgroundColor="#F5F0E3"
    card_view:cardCornerRadius="16dp"
    card_view:cardElevation="8dp"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp">

        <ImageView
            android:id="@+id/imgCapaLivro"
            android:layout_width="137dp"
            android:layout_height="193dp"
            android:contentDescription="@string/capalivro"
            android:elevation="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/harry_potter_camara"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.507"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.149" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/txtTituloLivro"
        android:layout_width="191dp"
        android:layout_height="22dp"
        android:fontFamily="@font/fredoka_one"
        android:gravity="center"
        android:maxLines="2"
        android:textAlignment="center"
        android:textColor="#4d464e"
        android:textSize="16sp"
        android:text="@string/t_tulo"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.555"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="0.83" />

    <TextView
        android:id="@+id/txtAutorLivro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:text="@string/autor"
        android:textAlignment="center"
        android:textColor="#4d464e"
        android:textSize="14sp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="0.943" />


</androidx.constraintlayout.widget.ConstraintLayout>